spices/raylib/tests/errors/raylib-sound-use-after-unload.tur
;; U1 negative: Sound is :linear (consumed by unload-sound); play-sound
;; borrows, so playing an unloaded sound is a use-after-free.
;;   tur check -Xsubstructural tests/errors/raylib-sound-use-after-unload.tur
;;   => error [TUR-E0101]: linear value 's' used after being consumed
;; Compile-fail fixture (see raylib-texture-use-after-unload.tur for the note).
(defmodule raylib_sound_use_after_unload_test
  (export)
(import raylib/audio :refer [Sound load-sound unload-sound play-sound])
(defn use-after-unload [] : void
  (let [s (load-sound "x.wav")]
    (do
      (unload-sound s)   ;; single legal consumption
      (play-sound s))))  ;; ERROR TUR-E0101: borrow after consume
) ;; end
